--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     font-family: 'Georgia',sans-serif;
     box-sizing: border-box;
 }
+body{
+    background-color: aquamarine;
+}
 .user{
     width: fit-content;
     margin: 150px auto;
@@ -12,7 +15,7 @@
 .user img{
     width: 320px;
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 40px;
     position: relative;
     z-index: 100;
     box-shadow: 10px 10px 10px rgba(0,0,0,0.3);
@@ -39,7 +42,7 @@
     text-decoration: none;
     display: inline-block;
     padding: 12px 40px;
-    border-radius: 3opx;
+    border-radius: 30px;
     margin-top: 20px;
 }
 .info span{
